<resources>
    <string name="app_name">GymBuddy</string>
    <string name="menu_home">Home</string>
    <string name="menu_add">Add</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_profile">Profile</string>
    <string name="login_image">login image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>