<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_add" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@android:drawable/stat_notify_chat"
        android:title="@string/menu_chat" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/baseline_favorite_border_24"
        android:title="@string/menu_favorites" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/menu_profile" />

</menu>