<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.gymbuddy.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_navigation_home_to_workoutDetailsFragment"
            app:destination="@id/workoutDetailsFragment">
            <argument
                android:name="workoutName"
                app:argType="string" />
            <argument
                android:name="workoutDescription"
                app:argType="string" />
            <argument
                android:name="workoutExercises"
                app:argType="string" />
            <argument
                android:name="workoutDifficulty"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.gymbuddy.ui.add.AddFragment"
        android:label="@string/menu_add"
        tools:layout="@layout/fragment_add">

        <action
            android:id="@+id/action_navigation_add_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.gymbuddy.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.gymbuddy.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.gymbuddy.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_editFragment"
            app:destination="@id/editFragment" />
    </fragment>

    <fragment
        android:id="@+id/editFragment"
        android:name="com.example.gymbuddy.ui.edit.EditFragment"
        android:label="fragment_edit"
        tools:layout="@layout/fragment_edit" />

    <fragment
        android:id="@+id/workoutDetailsFragment"
        android:name="com.example.gymbuddy.ui.details.WorkoutDetailsFragment"
        android:label="Workout Details"
        tools:layout="@layout/fragment_workout_details">

        <argument
            android:name="workoutName"
            app:argType="string" />
        <argument
            android:name="workoutDescription"
            app:argType="string" />
        <argument
            android:name="workoutExercises"
            app:argType="string" />
        <argument
            android:name="workoutDifficulty"
            app:argType="string" />
        <argument
            android:name="workoutOwner"
            app:argType="string" />
    </fragment>


</navigation>
